--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DoSoptTemplate"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,14 @@
         </activity>
 
         <activity
-            android:name=".presentation.LoginActivity"
-            android:exported="true">
+            android:name=".presentation.MainActivity"
+            android:exported="false">
+
+        </activity>
+
+        <activity
+            android:name=".presentation.SignUpActivity"
+            android:exported="false">
 
         </activity>
     </application>
