--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
         </activity>
 
         <activity
-            android:name=".presentation.MainActivity"
-            android:exported="false"
+            android:name=".presentation.HomeActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
 
         </activity>
@@ -39,6 +39,7 @@
             android:windowSoftInputMode="adjustResize">
 
         </activity>
+
     </application>
 
 </manifest>
