--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,12 @@ dependencies {
     //Indicator
     implementation("com.tbuonomo:dotsindicator:5.0")
 
+    // ROOM Database
+    implementation("androidx.room:room-runtime:2.6.0")
+    annotationProcessor("androidx.room:room-compiler:2.6.0")
+    kapt("androidx.room:room-compiler:2.6.0")
+    implementation("androidx.room:room-ktx:2.6.0")
+
     // define a BOM and its version
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
 
