--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".DoSoptApplication"
         android:allowBackup="true"
@@ -42,6 +44,14 @@
 
         <activity
             android:name=".presentation.home.HomeProfileDetailActivity"
+            android:exported="false"
+            android:screenOrientation="fullSensor"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
+
+        <activity
+            android:name=".presentation.home.HomeAddProfileActivity"
             android:exported="false"
             android:screenOrientation="fullSensor"
             android:windowSoftInputMode="adjustResize">
