--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DoSoptTemplate"
         tools:targetApi="31">
+
         <activity
-            android:name=".presentation.auth.LoginActivity"
+            android:name=".presentation.SplashActivity"
             android:exported="true"
-            android:screenOrientation="fullSensor"
-            android:windowSoftInputMode="adjustResize">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,8 +28,16 @@
         </activity>
 
         <activity
+            android:name=".presentation.auth.LoginActivity"
+            android:exported="false"
+            android:screenOrientation="fullSensor"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
+
+        <activity
             android:name=".presentation.home.HomeActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="fullSensor">
 
         </activity>
