--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         versionName "1.0"
 
         buildConfigField "String", "BASE_URL", properties["base_url"]
+        buildConfigField "String", "REQRES_BASE_URL", properties["reqres_base_url"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
