--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     //Indicator
     implementation("com.tbuonomo:dotsindicator:5.0")
 
+    //splashscreen api
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+
     // ROOM Database
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
