--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DoSoptTemplate"
+        android:theme="@style/Base.Theme.DoSoptTemplate"
         tools:targetApi="31">
 
         <activity
             android:name=".presentation.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash">
+            android:theme="@style/Theme.DoSopt.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
